--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
-VITE_ACTIVITY_URL = https://www.boredapi.com/api/
+VITE_ACTIVITY_URL = https://www.boredapi.com/api/activity
 VITE_UNSPLASH_URL = https://api.unsplash.com/search/photos?page=1&orientation=landscape
 VITE_UNSPLASH_ACCESS = FDA_OR24cXYANg79zvJFyTz8aXm4leMOIR4Q3SJ7Yog
