--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint *.js src/**/*.{js,mjs}",
+    "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css,mjs}\""
   },
   "devDependencies": {
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "prettier": "3.2.5",
     "vite": "^5.2.0"
   },
   "browserslist": [
@@ -18,5 +27,9 @@
     "last 3 opera versions",
     "last 3 ios_saf versions",
     "last 3 safari versions"
-  ]
+  ],
+  "repository": "https://github.com/wilsonBYU/randapp.git",
+  "author": "wilsonBYU <wilsonomar@byui.edu>",
+  "license": "MIT",
+  "dependencies": {}
 }
